--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -3,21 +3,14 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  border-bottom: 0px;
-  background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-
   background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
 
   @include respond(phone) {
-    padding: 0rem $default-font-size;
+    padding: 0 $default-font-size;
   }
 
   .hero-title {
@@ -70,12 +63,11 @@
 .main-title {
   position: absolute;
   margin: 0;
-  padding: 5;
+  padding: 5px;
   color: #F9F1E9;
   text-align: center;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate3d(-40%, -30%, 0);
   transform: translate3d(-40%, -30%, 0);
 }
 
@@ -91,7 +83,7 @@
 
 @media only screen and (max-width: 768px) {
   .demo .main-title {
-    padding: 0rem 1rem;
+    padding: 0 1rem;
     font-size: 3em;
   }
 }
